[gd_scene load_steps=17 format=2]

[ext_resource path="res://PieceScenes/BluePawn.tscn" type="PackedScene" id=1]
[ext_resource path="res://PieceScenes/BlueRook.tscn" type="PackedScene" id=2]
[ext_resource path="res://PieceScenes/WhiteKnight.tscn" type="PackedScene" id=3]
[ext_resource path="res://PieceScenes/BlueBishop.tscn" type="PackedScene" id=4]
[ext_resource path="res://PieceScenes/WhiteQueen.tscn" type="PackedScene" id=5]
[ext_resource path="res://PieceScenes/BlueKnight.tscn" type="PackedScene" id=6]
[ext_resource path="res://PieceScenes/BlueKing.tscn" type="PackedScene" id=7]
[ext_resource path="res://PieceScenes/BlueQueen.tscn" type="PackedScene" id=8]
[ext_resource path="res://PieceScenes/WhiteKing.tscn" type="PackedScene" id=9]
[ext_resource path="res://PieceScenes/WhitePawn.tscn" type="PackedScene" id=10]
[ext_resource path="res://PieceScenes/WhiteBishop.tscn" type="PackedScene" id=11]
[ext_resource path="res://PieceScenes/WhiteRook.tscn" type="PackedScene" id=12]
[ext_resource path="res://Main.gd" type="Script" id=13]
[ext_resource path="res://block.png" type="Texture" id=14]

[sub_resource type="Environment" id=2]
background_mode = 4
ambient_light_color = Color( 0.882353, 0.537255, 0.537255, 1 )
glow_enabled = true
glow_levels/1 = true
glow_levels/2 = true
glow_bloom = 0.02
glow_blend_mode = 0
glow_hdr_threshold = 1.5

[sub_resource type="TileSet" id=1]
0/name = "block.png 0"
0/texture = ExtResource( 14 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 64, 64 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0
1/name = "block.png 1"
1/texture = ExtResource( 14 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 0.145098, 0.427451, 0.964706, 1 )
1/region = Rect2( 0, 0, 64, 64 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape_one_way = false
1/shape_one_way_margin = 0.0
1/shapes = [  ]
1/z_index = 0
2/name = "block.png 2"
2/texture = ExtResource( 14 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 0.901961, 0.760784, 0.121569, 1 )
2/region = Rect2( 0, 0, 32, 32 )
2/tile_mode = 0
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/shape_offset = Vector2( 0, 0 )
2/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
2/shape_one_way = false
2/shape_one_way_margin = 0.0
2/shapes = [  ]
2/z_index = 0
3/name = "block.png 3"
3/texture = ExtResource( 14 )
3/tex_offset = Vector2( 0, 0 )
3/modulate = Color( 0.913725, 0.52549, 0.0235294, 1 )
3/region = Rect2( 0, 0, 32, 32 )
3/tile_mode = 0
3/occluder_offset = Vector2( 0, 0 )
3/navigation_offset = Vector2( 0, 0 )
3/shape_offset = Vector2( 0, 0 )
3/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
3/shape_one_way = false
3/shape_one_way_margin = 0.0
3/shapes = [  ]
3/z_index = 0
4/name = "block.png 4"
4/texture = ExtResource( 14 )
4/tex_offset = Vector2( 0, 0 )
4/modulate = Color( 0.980392, 0.105882, 0.105882, 1 )
4/region = Rect2( 0, 0, 32, 32 )
4/tile_mode = 0
4/occluder_offset = Vector2( 0, 0 )
4/navigation_offset = Vector2( 0, 0 )
4/shape_offset = Vector2( 0, 0 )
4/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
4/shape_one_way = false
4/shape_one_way_margin = 0.0
4/shapes = [  ]
4/z_index = 0
5/name = "block.png 5"
5/texture = ExtResource( 14 )
5/tex_offset = Vector2( 0, 0 )
5/modulate = Color( 0, 0, 0, 1 )
5/region = Rect2( 0, 0, 32, 32 )
5/tile_mode = 0
5/occluder_offset = Vector2( 0, 0 )
5/navigation_offset = Vector2( 0, 0 )
5/shape_offset = Vector2( 0, 0 )
5/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
5/shape_one_way = false
5/shape_one_way_margin = 0.0
5/shapes = [  ]
5/z_index = 0
6/name = "block.png 6"
6/texture = ExtResource( 14 )
6/tex_offset = Vector2( 0, 0 )
6/modulate = Color( 0.431373, 0.768627, 0.458824, 1 )
6/region = Rect2( 0, 0, 64, 64 )
6/tile_mode = 0
6/occluder_offset = Vector2( 0, 0 )
6/navigation_offset = Vector2( 0, 0 )
6/shape_offset = Vector2( 0, 0 )
6/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
6/shape_one_way = false
6/shape_one_way_margin = 0.0
6/shapes = [  ]
6/z_index = 0

[node name="Main" type="Node2D"]
script = ExtResource( 13 )

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 2 )

[node name="Board" type="TileMap" parent="."]
tile_set = SubResource( 1 )
format = 1
tile_data = PoolIntArray( 0, 0, 0, 1, 1, 0, 2, 0, 0, 3, 1, 0, 4, 0, 0, 5, 1, 0, 6, 0, 0, 7, 1, 0, 65536, 1, 0, 65537, 0, 0, 65538, 1, 0, 65539, 0, 0, 65540, 1, 0, 65541, 0, 0, 65542, 1, 0, 65543, 0, 0, 131072, 0, 0, 131073, 1, 0, 131074, 0, 0, 131075, 1, 0, 131076, 0, 0, 131077, 1, 0, 131078, 0, 0, 131079, 1, 0, 196608, 1, 0, 196609, 0, 0, 196610, 1, 0, 196611, 0, 0, 196612, 1, 0, 196613, 0, 0, 196614, 1, 0, 196615, 0, 0, 262144, 0, 0, 262145, 1, 0, 262146, 0, 0, 262147, 1, 0, 262148, 0, 0, 262149, 1, 0, 262150, 0, 0, 262151, 1, 0, 327680, 1, 0, 327681, 0, 0, 327682, 1, 0, 327683, 0, 0, 327684, 1, 0, 327685, 0, 0, 327686, 1, 0, 327687, 0, 0, 393216, 0, 0, 393217, 1, 0, 393218, 0, 0, 393219, 1, 0, 393220, 0, 0, 393221, 1, 0, 393222, 0, 0, 393223, 1, 0, 458752, 1, 0, 458753, 0, 0, 458754, 1, 0, 458755, 0, 0, 458756, 1, 0, 458757, 0, 0, 458758, 1, 0, 458759, 0, 0 )

[node name="WhitePawn2" parent="Board" groups=["WhiteTeam"] instance=ExtResource( 10 )]
position = Vector2( 32, 416 )

[node name="Pawn4" parent="Board" groups=["WhiteTeam"] instance=ExtResource( 10 )]
position = Vector2( 224, 416 )

[node name="Pawn6" parent="Board" groups=["WhiteTeam"] instance=ExtResource( 10 )]
position = Vector2( 352, 416 )

[node name="Pawn7" parent="Board" groups=["WhiteTeam"] instance=ExtResource( 10 )]
position = Vector2( 416, 416 )

[node name="Pawn9" parent="Board" groups=["BlueTeam"] instance=ExtResource( 1 )]
position = Vector2( 32, 96 )

[node name="Pawn10" parent="Board" groups=["BlueTeam"] instance=ExtResource( 1 )]
position = Vector2( 96, 96 )

[node name="Pawn11" parent="Board" groups=["BlueTeam"] instance=ExtResource( 1 )]
position = Vector2( 160, 96 )

[node name="Pawn12" parent="Board" groups=["BlueTeam"] instance=ExtResource( 1 )]
position = Vector2( 224, 96 )

[node name="Pawn13" parent="Board" groups=["BlueTeam"] instance=ExtResource( 1 )]
position = Vector2( 288, 96 )

[node name="Pawn14" parent="Board" groups=["BlueTeam"] instance=ExtResource( 1 )]
position = Vector2( 352, 96 )

[node name="Pawn15" parent="Board" groups=["BlueTeam"] instance=ExtResource( 1 )]
position = Vector2( 416, 96 )

[node name="Pawn16" parent="Board" groups=["BlueTeam"] instance=ExtResource( 1 )]
position = Vector2( 480, 96 )

[node name="Bishop" parent="Board" groups=["BlueTeam"] instance=ExtResource( 4 )]
position = Vector2( 160, 32 )

[node name="Bishop2" parent="Board" groups=["BlueTeam"] instance=ExtResource( 4 )]
position = Vector2( 352, 32 )

[node name="King" parent="Board" groups=["BlueTeam"] instance=ExtResource( 7 )]
position = Vector2( 288, 32 )

[node name="Knight" parent="Board" groups=["BlueTeam"] instance=ExtResource( 6 )]
position = Vector2( 96, 32 )

[node name="Knight2" parent="Board" groups=["BlueTeam"] instance=ExtResource( 6 )]
position = Vector2( 416, 32 )

[node name="Queen" parent="Board" groups=["BlueTeam"] instance=ExtResource( 8 )]
position = Vector2( 224, 32 )

[node name="Rook" parent="Board" groups=["BlueTeam"] instance=ExtResource( 2 )]
position = Vector2( 32, 32 )

[node name="Rook2" parent="Board" groups=["BlueTeam"] instance=ExtResource( 2 )]
position = Vector2( 480, 32 )

[node name="Bishop3" parent="Board" groups=["WhiteTeam"] instance=ExtResource( 11 )]
position = Vector2( 160, 480 )

[node name="Bishop4" parent="Board" groups=["WhiteTeam"] instance=ExtResource( 11 )]
position = Vector2( 352, 480 )

[node name="King2" parent="Board" groups=["WhiteTeam"] instance=ExtResource( 9 )]
position = Vector2( 288, 480 )

[node name="Knight3" parent="Board" groups=["WhiteTeam"] instance=ExtResource( 3 )]
position = Vector2( 96, 480 )

[node name="Knight4" parent="Board" groups=["WhiteTeam"] instance=ExtResource( 3 )]
position = Vector2( 416, 480 )

[node name="Queen2" parent="Board" groups=["WhiteTeam"] instance=ExtResource( 5 )]
position = Vector2( 224, 480 )

[node name="Rook3" parent="Board" groups=["WhiteTeam"] instance=ExtResource( 12 )]
position = Vector2( 32, 480 )

[node name="Rook4" parent="Board" groups=["WhiteTeam"] instance=ExtResource( 12 )]
position = Vector2( 480, 480 )

[node name="WhitePawn" parent="Board" groups=["WhiteTeam"] instance=ExtResource( 10 )]
position = Vector2( 96, 416 )

[node name="WhitePawn3" parent="Board" groups=["WhiteTeam"] instance=ExtResource( 10 )]
position = Vector2( 160, 416 )

[node name="WhitePawn4" parent="Board" groups=["WhiteTeam"] instance=ExtResource( 10 )]
position = Vector2( 288, 416 )

[node name="WhitePawn5" parent="Board" groups=["WhiteTeam"] instance=ExtResource( 10 )]
position = Vector2( 480, 416 )

[node name="Control" type="Control" parent="."]
visible = false
margin_left = 512.0
margin_right = 768.0
margin_bottom = 608.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HostButton" type="Button" parent="Control"]
margin_left = 32.0
margin_top = 384.0
margin_right = 224.0
margin_bottom = 448.0
text = "Host"

[node name="JoinButton" type="Button" parent="Control"]
margin_left = 32.0
margin_top = 480.0
margin_right = 224.0
margin_bottom = 544.0
text = "Join"

[connection signal="tree_entered" from="." to="." method="_on_Board_tree_entered"]
[connection signal="pressed" from="Control/HostButton" to="." method="_on_HostButton_pressed"]
[connection signal="pressed" from="Control/JoinButton" to="." method="_on_JoinButton_pressed"]
